app/public/styles.css
body {
  letter-spacing: 1px;
}
header {
  /* background: #FAF0E6; */
  background: #364958;
  color: #c9e4ca;
  font-family: 'Monoton', cursive;
  height: 50px;
  padding: 0 25px;
}

header nav {
  float: right;
}

header h1 {
  float: left;
  /* text-indent: -9999px;
  background: url('../images/dog-icon.svg') no-repeat; */
  height: 35px;
  width: 150px;
  margin-top: 18px;
}

nav li {
  display: inline-block;
  padding: 17px 10px;
}

nav li a {
  text-decoration: none;
  color: #c9e4ca;
}

nav li:hover {
  background: #3b6064;
  color: white;
  cursor: pointer;
}

/* Styling for Index Pages */

.index {
  background: #fefffe;
  font-family: 'Josefin Sans', sans-serif;
}

.dashboard-link {
  float: left;
  color: #c9e4ca;
  text-decoration: underline;
}

.index-title {
  font-size: 36px;
  color:#c9e4ca;
}

#delete-btn {
  background:#364958;
  color: white;
  margin-right: 1%;
}
#delete-btn:hover {
  background: #364958;
}

.jumbotron {
  background: #3b6064;
  color: #c9e4ca;
  font-family: 'Monoton', cursive;
  border-radius: 0%;
}
.btn {
  padding: 14px 24px;
}
.col.merchant-index {
  margin-left: 2%;
}
.row.merchant-index {
  margin-right: 2%;
  outline-style: dotted;
  outline-color: #c9e4ca;
}

#merchant-link {
  background:  #c9e4ca;
  color: #364958;
  padding: 14px 24px;
  font-size: 20px;
}
#merchant-link:hover {
  background: #87bba2;
}

/* Styling for new pages */
.new-title {
  font-size: 36px;
  color:#c9e4ca;
}
.new-page {
  text-align: center;

}

/* begin merchants-dashboard styling */
.best-merchants {
  background: #364958;
  color: #c9e4ca;
  text-align: center;
  margin-left: 5%;
  margin-right: 5%;
  padding: 2%;
}

.item-container {
  display: inline-block;
  text-align: center;
  vertical-align: top;
  margin: 2% 2%;
  background: #DFEBE4;
  padding: 20px 20px;
  border-radius: 5%;
}
.item-container img {
  width: 200px;
  height: auto;
}
.row.best-merchants {
  text-align: center;
}
.col.best-merchants {
  text-align: left;
  vertical-align: center;
}

.merchant-dashboard-page {
  /* text-align: center; */
  font-size: 18px;
  font-family: 'Josefin Sans', sans-serif;

}

a:hover {
  color: #18a2b8;
}

section a {
  color: #11bbd7;
}

.merchant-container {
  display: inline-block;
  text-align: left;
  vertical-align: top;
  margin: 2% 2%;
  background: #DFEBE4;
  padding: 2% 2%;
  border-radius: 5%;
  font-size: 18px;
  font-family: 'Josefin Sans', sans-serif;
}
.merchant-container li {
  margin-bottom: 5%;
}

.underline {
  text-decoration: underline;
}
.bold {
  text-decoration:
}

.merchant-cubes{
  margin-top: 3%;
  border: 0;
}

/* Styling for item page */
.image-size {
  width: 100%;
  height: auto;
  padding: 2% 2%;
}
.item-show {
  margin-left: 5%;
  margin-right: 5%;
}
.item-show.row {
  vertical-align: top;
}

/* Styling for item page */

/*Styling for item index page */

.col.invoice-index {
  /* margin-left: 2%; */
}
.row.invoice-index {
  /* margin-right: 2%; */
  outline-style: dotted;
  outline-color: #c9e4ca;
  padding-left: 5%;
  padding-right: 5%;
}
.invoice-index-body {
  vertical-align: center;
  margin-left: 5%;
  margin-right: 5%;
}
a#invoice-link.badge{
  padding: 20px;
  font-size: 16px;
  margin-right: 50%;
}

.invoice-index-body a.btn.btn-info{
  margin-right: 2%;
  margin-left: 25%;

}

.invoice-index-body#delete-btn {
  background:#3b6064;
  color: white;
  height: 100%;
  margin-right: 0;
}

/* Item Edit page styling */
h3 {
  padding: 20px 0px;
  font-size: 20px;
}
.edit-body {
  /* margin-left: 15%;
  margin-right: 15%; */
  margin-top: 2%;
  text-align: left;
}
.edit-square {
  background: #DFEBE4;
  padding: 10% 10%;
  margin-left: 15%;
  margin-right: 15%;
  margin-bottom: 15%;
}
.edit-item {

}
.edit-body textarea {
  padding: 3% 3%;
  overflow: scroll;
  resize: none;
  max-width: 100%;
}
.green-line {
  outline-style: solid;
  outline-color: #87bba2;
}
.edit-body input {
  padding: 10px 10px;
}
form .edit-item {
  margin-left: 5%;
  margin-right: 5%;
}
.row.edit-buttons {
  margin-top: 15%;
}

.input-form {
  width: 100%;
  text-align: center;
}

.input-form label {
  font-size: 18px;
}

.input-form input[type=text] {
  padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #364958;
    border-radius: 4px;
    font-size: 18px;
}

/* Item dashboard styling*/

.flexy {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
}
/* Invoice Show Page Styling */

/* Invoice New Page Styling */
.new-item-body {
  margin-left: 15%;
  margin-right: 15%;
}


.show-title {
  font-size: 36px;
  color:#c9e4ca;
}
.row.show-buttons {
  margin-top: 5%;
}
.row.show-buttons#delete-btn {
  background:#3b6064;
  color: white;
  height: 100%;
  margin-right: 0;
}

h2 {
  padding: 20px 0px;
  font-size: 25px;
  text-align: center;
  margin-bottom: 5%;
}
#invoices-show-body {
  margin-left: 10%;
  margin-right: 10%;
}
.row.invoices-show {
  padding: 1% 2%;
  outline-style: dotted;
  outline-color: #c9e4ca;
  margin-bottom: 5%;
}
.jumbotron.text-center.less-pad {
  padding: 5% 5%;
}

/* editing item/edit buttons */
.btn.edit {
  background:#364958;
  color: white;
  margin-right: 1%;
}

.btn.edit:hover {
  background: #364958;

}

